--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,13 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
 !**/src/test/**
+
 .metadata
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
 .settings
+.springBeans
+.sts4-cache
